[package]
name = "spotify_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }

tokio = { version = "1", features = ["full"] }
rayon = "1.10.0"
futures = "0.3"
num_cpus = "1.14.0"

